# mylibrary

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: mylibraryConfig.cmake
include/: mylibrary.hpp
src/: CMakeLists.txt  mylibrary.cpp
vcpkg/: portfile.cmake  vcpkg.json
